[package]
name = "neutrondb"
version = "2.3.0"
edition = "2021"
license = "MIT"
description = "NeutronDB is a Log-structured merge-tree key-value store for Rust."
repository = "https://github.com/stelar-software/rust-neutrondb"
readme = "README.md"

[dependencies]
astro-format = "0.6.0"
fides = "2.2.1"
opis = "3.0.7"
