[package]
name = "neutrondb"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "NeutronDB is a log-structured merge-tree key-value store for UTF-8 strings of arbitrary length."
repository = "https://github.com/stelar-labs/neutrondb-rs"
readme = "README.md"

[dependencies]
astro-format = "0.8.0"
fides = "2.2.1"
opis = "3.0.7"
